test/spec_vectors/ref_eq/fail/module_6.wat
(module (func (export "eq") (param $r (ref null extern)) (result i32) (ref.eq (local.get $r) (local.get $r))))